@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016-2022 Thomas Akehurst
+ * Copyright (C) 2016-2025 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,18 +15,20 @@
  */
 package com.github.tomakehurst.wiremock.matching;
 
+import static com.github.tomakehurst.wiremock.common.Exceptions.throwUnchecked;
 import static com.github.tomakehurst.wiremock.common.LocalNotifier.notifier;
-import static com.google.common.base.Strings.isNullOrEmpty;
+import static com.github.tomakehurst.wiremock.common.Strings.isNullOrEmpty;
 import static org.xmlunit.diff.ComparisonType.*;
 
+import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.github.tomakehurst.wiremock.common.xml.Xml;
-import com.google.common.base.Joiner;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Sets;
+import com.github.tomakehurst.wiremock.stubbing.SubEvent;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.*;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
 import org.xmlunit.XMLUnitException;
@@ -37,8 +39,8 @@ import org.xmlunit.placeholder.PlaceholderDifferenceEvaluator;
 
 public class EqualToXmlPattern extends StringValuePattern {
 
-  private static Set<ComparisonType> COUNTED_COMPARISONS =
-      ImmutableSet.of(
+  private static final Set<ComparisonType> COUNTED_COMPARISONS =
+      Set.of(
           ELEMENT_TAG_NAME,
           SCHEMA_LOCATION,
           NO_NAMESPACE_SCHEMA_LOCATION,
@@ -53,30 +55,45 @@ public class EqualToXmlPattern extends StringValuePattern {
           CHILD_LOOKUP,
           ATTR_NAME_LOOKUP);
 
+  private static final DocumentBuilderFactory DOCUMENT_BUILDER_FACTORY =
+      newDocumentBuilderFactory();
+
   private final Boolean enablePlaceholders;
   private final String placeholderOpeningDelimiterRegex;
   private final String placeholderClosingDelimiterRegex;
   private final DifferenceEvaluator diffEvaluator;
   private final Set<ComparisonType> exemptedComparisons;
+  private final Boolean ignoreOrderOfSameNode;
   private final Document expectedXmlDoc;
 
   public EqualToXmlPattern(@JsonProperty("equalToXml") String expectedValue) {
-    this(expectedValue, null, null, null, null);
+    this(expectedValue, null, null, null, null, null);
   }
 
   public EqualToXmlPattern(
       @JsonProperty("equalToXml") String expectedValue,
       @JsonProperty("enablePlaceholders") Boolean enablePlaceholders,
+      @JsonProperty("ignoreOrderOfSameNode") boolean ignoreOrderOfSameNode) {
+    this(expectedValue, enablePlaceholders, null, null, null, ignoreOrderOfSameNode);
+  }
+
+  @JsonCreator
+  public EqualToXmlPattern(
+      @JsonProperty("equalToXml") String expectedValue,
+      @JsonProperty("enablePlaceholders") Boolean enablePlaceholders,
       @JsonProperty("placeholderOpeningDelimiterRegex") String placeholderOpeningDelimiterRegex,
       @JsonProperty("placeholderClosingDelimiterRegex") String placeholderClosingDelimiterRegex,
-      @JsonProperty("exemptedComparisons") Set<ComparisonType> exemptedComparisons) {
+      @JsonProperty("exemptedComparisons") Set<ComparisonType> exemptedComparisons,
+      @JsonProperty("ignoreOrderOfSameNode") Boolean ignoreOrderOfSameNode) {
 
     super(expectedValue);
-    expectedXmlDoc = Xml.read(expectedValue); // Throw an exception if we can't parse the document
+    // Throw an exception if we can't parse the document
+    expectedXmlDoc = Xml.read(expectedValue, DOCUMENT_BUILDER_FACTORY);
     this.enablePlaceholders = enablePlaceholders;
     this.placeholderOpeningDelimiterRegex = placeholderOpeningDelimiterRegex;
     this.placeholderClosingDelimiterRegex = placeholderClosingDelimiterRegex;
     this.exemptedComparisons = exemptedComparisons;
+    this.ignoreOrderOfSameNode = ignoreOrderOfSameNode;
 
     IgnoreUncountedDifferenceEvaluator baseDifferenceEvaluator =
         new IgnoreUncountedDifferenceEvaluator(exemptedComparisons);
@@ -102,6 +119,10 @@ public class EqualToXmlPattern extends StringValuePattern {
 
   public Boolean isEnablePlaceholders() {
     return enablePlaceholders;
+  }
+
+  public Boolean isIgnoreOrderOfSameNode() {
+    return ignoreOrderOfSameNode;
   }
 
   public String getPlaceholderOpeningDelimiterRegex() {
@@ -132,12 +153,14 @@ public class EqualToXmlPattern extends StringValuePattern {
                   .ignoreWhitespace()
                   .ignoreComments()
                   .withDifferenceEvaluator(diffEvaluator)
-                  .withNodeMatcher(new OrderInvariantNodeMatcher())
-                  .withDocumentBuilderFactory(Xml.newDocumentBuilderFactory())
+                  .withNodeMatcher(new OrderInvariantNodeMatcher(ignoreOrderOfSameNode))
+                  .withDocumentBuilderFactory(DOCUMENT_BUILDER_FACTORY)
                   .build();
 
           return !diff.hasDifferences();
         } catch (XMLUnitException e) {
+          appendSubEvent(SubEvent.warning(e.getMessage()));
+
           notifier()
               .info(
                   "Failed to process XML. "
@@ -168,20 +191,16 @@ public class EqualToXmlPattern extends StringValuePattern {
                   .ignoreComments()
                   .withDifferenceEvaluator(diffEvaluator)
                   .withComparisonListeners(
-                      new ComparisonListener() {
-                        @Override
-                        public void comparisonPerformed(
-                            Comparison comparison, ComparisonResult outcome) {
-                          if (COUNTED_COMPARISONS.contains(comparison.getType())
-                              && comparison.getControlDetails().getValue() != null) {
-                            totalComparisons.incrementAndGet();
-                            if (outcome == ComparisonResult.DIFFERENT) {
-                              differences.incrementAndGet();
-                            }
+                      (comparison, outcome) -> {
+                        if (COUNTED_COMPARISONS.contains(comparison.getType())
+                            && comparison.getControlDetails().getValue() != null) {
+                          totalComparisons.incrementAndGet();
+                          if (outcome == ComparisonResult.DIFFERENT) {
+                            differences.incrementAndGet();
                           }
                         }
                       })
-                  .withDocumentBuilderFactory(Xml.newDocumentBuilderFactory())
+                  .withDocumentBuilderFactory(DOCUMENT_BUILDER_FACTORY)
                   .build();
         } catch (XMLUnitException e) {
           notifier()
@@ -195,11 +214,25 @@ public class EqualToXmlPattern extends StringValuePattern {
           return 1.0;
         }
 
-        notifier().info(Joiner.on("\n").join(diff.getDifferences()));
+        notifier()
+            .info(
+                StreamSupport.stream(diff.getDifferences().spliterator(), false)
+                    .map(Object::toString)
+                    .collect(Collectors.joining("\n")));
 
         return differences.doubleValue() / totalComparisons.doubleValue();
       }
     };
+  }
+
+  private static DocumentBuilderFactory newDocumentBuilderFactory() {
+    DocumentBuilderFactory factory = Xml.newDocumentBuilderFactory();
+    try {
+      factory.setFeature("http://xml.org/sax/features/namespaces", true);
+    } catch (ParserConfigurationException e) {
+      throwUnchecked(e);
+    }
+    return factory;
   }
 
   private static class IgnoreUncountedDifferenceEvaluator implements DifferenceEvaluator {
@@ -209,7 +242,9 @@ public class EqualToXmlPattern extends StringValuePattern {
     public IgnoreUncountedDifferenceEvaluator(Set<ComparisonType> exemptedComparisons) {
       finalCountedComparisons =
           exemptedComparisons != null
-              ? Sets.difference(COUNTED_COMPARISONS, exemptedComparisons)
+              ? COUNTED_COMPARISONS.stream()
+                  .filter(e -> !exemptedComparisons.contains(e))
+                  .collect(Collectors.toSet())
               : COUNTED_COMPARISONS;
     }
 
@@ -230,10 +265,17 @@ public class EqualToXmlPattern extends StringValuePattern {
         enablePlaceholders,
         placeholderOpeningDelimiterRegex,
         placeholderClosingDelimiterRegex,
-        ImmutableSet.copyOf(comparisons));
+        new HashSet<>(Arrays.asList(comparisons)),
+        ignoreOrderOfSameNode);
   }
 
   private static final class OrderInvariantNodeMatcher extends DefaultNodeMatcher {
+    private static Boolean secondaryOrderByTextContent;
+
+    public OrderInvariantNodeMatcher(Boolean secondaryOrderByTextContent) {
+      OrderInvariantNodeMatcher.secondaryOrderByTextContent = secondaryOrderByTextContent;
+    }
+
     @Override
     public Iterable<Map.Entry<Node, Node>> match(
         Iterable<Node> controlNodes, Iterable<Node> testNodes) {
@@ -242,15 +284,17 @@ public class EqualToXmlPattern extends StringValuePattern {
     }
 
     private static Iterable<Node> sort(Iterable<Node> nodes) {
-      return FluentIterable.from(nodes).toSortedList(COMPARATOR);
+      return StreamSupport.stream(nodes.spliterator(), false)
+          .sorted(getComparator())
+          .collect(Collectors.toList());
     }
 
-    private static final Comparator<Node> COMPARATOR =
-        new Comparator<Node>() {
-          @Override
-          public int compare(Node node1, Node node2) {
-            return node1.getLocalName().compareTo(node2.getLocalName());
-          }
-        };
+    private static Comparator<Node> getComparator() {
+      if (Objects.nonNull(secondaryOrderByTextContent) && secondaryOrderByTextContent) {
+        return Comparator.comparing(Node::getLocalName).thenComparing(Node::getTextContent);
+      } else {
+        return Comparator.comparing(Node::getLocalName);
+      }
+    }
   }
 }
