@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2017-2022 Thomas Akehurst
+ * Copyright (C) 2017-2024 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,19 +15,16 @@
  */
 package com.github.tomakehurst.wiremock.matching;
 
-import static com.google.common.collect.FluentIterable.from;
-
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.github.tomakehurst.wiremock.http.Body;
 import com.github.tomakehurst.wiremock.http.Request;
-import com.google.common.base.Function;
-import com.google.common.base.Predicate;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class MultipartValuePattern implements ValueMatcher<Request.Part> {
 
@@ -37,6 +34,7 @@ public class MultipartValuePattern implements ValueMatcher<Request.Part> {
   }
 
   private final String name;
+  private final String filename;
   private final Map<String, MultiValuePattern> headers;
   private final List<ContentPattern<?>> bodyPatterns;
   private final MatchingType matchingType;
@@ -44,10 +42,12 @@ public class MultipartValuePattern implements ValueMatcher<Request.Part> {
   @JsonCreator
   public MultipartValuePattern(
       @JsonProperty("name") String name,
+      @JsonProperty("fileName") String filename,
       @JsonProperty("matchingType") MatchingType type,
       @JsonProperty("headers") Map<String, MultiValuePattern> headers,
       @JsonProperty("bodyPatterns") List<ContentPattern<?>> body) {
     this.name = name;
+    this.filename = filename;
     this.matchingType = type;
     this.headers = headers;
     this.bodyPatterns = body;
@@ -68,7 +68,8 @@ public class MultipartValuePattern implements ValueMatcher<Request.Part> {
     if (headers != null || bodyPatterns != null) {
       return MatchResult.aggregate(
           headers != null ? matchHeaderPatterns(value) : MatchResult.exactMatch(),
-          bodyPatterns != null ? matchBodyPatterns(value) : MatchResult.exactMatch());
+          bodyPatterns != null ? matchBodyPatterns(value) : MatchResult.exactMatch(),
+          filename != null ? matchFileName(value) : MatchResult.exactMatch());
     }
 
     return MatchResult.exactMatch();
@@ -79,14 +80,8 @@ public class MultipartValuePattern implements ValueMatcher<Request.Part> {
   }
 
   private MatchResult matchAllMultiparts(final Request request) {
-    return from(request.getParts())
-            .allMatch(
-                new Predicate<Request.Part>() {
-                  @Override
-                  public boolean apply(Request.Part input) {
-                    return MultipartValuePattern.this.match(input).isExactMatch();
-                  }
-                })
+    return request.getParts().stream()
+            .allMatch(input -> MultipartValuePattern.this.match(input).isExactMatch())
         ? MatchResult.exactMatch()
         : MatchResult.noMatch();
   }
@@ -97,20 +92,17 @@ public class MultipartValuePattern implements ValueMatcher<Request.Part> {
       return MatchResult.noMatch();
     }
 
-    return from(parts)
-            .anyMatch(
-                new Predicate<Request.Part>() {
-                  @Override
-                  public boolean apply(Request.Part input) {
-                    return MultipartValuePattern.this.match(input).isExactMatch();
-                  }
-                })
+    return parts.stream().anyMatch(input -> MultipartValuePattern.this.match(input).isExactMatch())
         ? MatchResult.exactMatch()
         : MatchResult.noMatch();
   }
 
   public String getName() {
     return name;
+  }
+
+  public String getFileName() {
+    return filename;
   }
 
   public Map<String, MultiValuePattern> getHeaders() {
@@ -125,17 +117,21 @@ public class MultipartValuePattern implements ValueMatcher<Request.Part> {
     return bodyPatterns;
   }
 
+  private MatchResult matchFileName(final Request.Part part) {
+    if (filename != null && !filename.isEmpty()) {
+      return MatchResult.of(filename.equals(part.getFileName()));
+    }
+    return MatchResult.exactMatch();
+  }
+
   private MatchResult matchHeaderPatterns(final Request.Part part) {
     if (headers != null && !headers.isEmpty()) {
       return MatchResult.aggregate(
-          from(headers.entrySet())
-              .transform(
-                  new Function<Map.Entry<String, MultiValuePattern>, MatchResult>() {
-                    public MatchResult apply(Map.Entry<String, MultiValuePattern> headerPattern) {
-                      return headerPattern.getValue().match(part.getHeader(headerPattern.getKey()));
-                    }
-                  })
-              .toList());
+          headers.entrySet().stream()
+              .map(
+                  headerPattern ->
+                      headerPattern.getValue().match(part.getHeader(headerPattern.getKey())))
+              .collect(Collectors.toList()));
     }
 
     return MatchResult.exactMatch();
@@ -143,15 +139,9 @@ public class MultipartValuePattern implements ValueMatcher<Request.Part> {
 
   private MatchResult matchBodyPatterns(final Request.Part value) {
     return MatchResult.aggregate(
-        from(bodyPatterns)
-            .transform(
-                new Function<ContentPattern, MatchResult>() {
-                  @Override
-                  public MatchResult apply(ContentPattern bodyPattern) {
-                    return matchBody(value, bodyPattern);
-                  }
-                })
-            .toList());
+        bodyPatterns.stream()
+            .map(bodyPattern -> matchBody(value, bodyPattern))
+            .collect(Collectors.toList()));
   }
 
   private static MatchResult matchBody(Request.Part part, ContentPattern<?> bodyPattern) {
@@ -175,6 +165,7 @@ public class MultipartValuePattern implements ValueMatcher<Request.Part> {
     MultipartValuePattern that = (MultipartValuePattern) o;
 
     return Objects.equals(name, that.name)
+        && Objects.equals(filename, that.filename)
         && Objects.equals(headers, that.headers)
         && Objects.equals(bodyPatterns, that.bodyPatterns)
         && matchingType == that.matchingType;
@@ -182,6 +173,6 @@ public class MultipartValuePattern implements ValueMatcher<Request.Part> {
 
   @Override
   public int hashCode() {
-    return Objects.hash(name, headers, bodyPatterns, matchingType);
+    return Objects.hash(name, filename, headers, bodyPatterns, matchingType);
   }
 }
